--- a/style.css
+++ b/style.css
@@ -41,3 +41,25 @@ h1 {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+/*Image Container */
+.image-container {
+    margin: 10px 30%;
+}
+
+.image-container img {
+    width: 100%;
+    margin: 5px;
+
+}
+
+/* Media Query: large Smartphone */
+@media screen and(max-width:600px) {
+    h1 {
+        font-size: 20px;
+    }
+
+    .image-container {
+        margin: 10px;
+    }
+}
